--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,12 +40,12 @@ mailing.frontend.activation-url=http://localhost:4200/activate-account
 
 
 
-huggingface.api.token=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
+huggingface.api.token=key
 huggingface.model.url=https://ilyasseben-smartquiz-qcm-api.hf.space/run/predict
 
 
 # Remove HuggingFace properties and add these:
-gemini.api.key=AIzaSyD3shpMs81nL64lb49_PtbS9DvPSdbm9sU
+gemini.api.key=key
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
 
 
